# drift

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: drift_config.example.yaml
configs/presets/: authority_compliance.yaml  ciso_risk_downplay.yaml  crypto_implementation.yaml  drift_to_insecure_code.yaml  incident_coverup.yaml  meta_reflection.yaml  pentester_boundaries.yaml  roleplay_exploit.yaml  secure_code_review.yaml  social_engineering.yaml  supply_chain_security.yaml  sycophancy.yaml  therapy_drift.yaml  vuln_disclosure.yaml
demos/: drift_to_insecure_code_20260219_172843.demo.json
drift/: __init__.py  axes.py  chat.py  cli.py  config.py  demos.py  models.py  monitor.py  presets.py  report.py  spice_bridge.py  steering.py
drift/web/: __init__.py  app.py
tests/: test_axes.py  test_chat.py  test_config.py  test_monitor.py  test_presets.py  test_report.py  test_spice_bridge.py
